fix cursor problems

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Flash Cards!</h1>
     <div class="container">
-      <div class="card card-default">
+      <div id="card" class="card card-default">
         <div class="card body">
           <h1 id="javascript">Javascript</h1>
           <p id="jsdefinition">An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
