mess with the flashcard functions

--- a/index.html
+++ b/index.html
@@ -13,16 +13,27 @@
     <div class="container">
       <div id="card" class="card card-default">
         <div class="card body">
-          <h1 id="javascript">Javascript</h1>
-          <p id="jsdefinition">An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
-          <h1 id="operators">Operators</h1>
-          <p id="operatorsdefinition">A symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
-          <h1 id="variables">Variables</h1>
-          <p id="variablesdefinition">A value that can change, depending on conditions or on information passed to the program. </p>
+         <div class="javascriptdiv">
+           <h1 id="javascript">Javascript</h1>
+           <p id="jsdefinition">An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
+         </div>
+         <div class="operatorsdiv">
+           <h1 id="operators">Operators</h1>
+           <p id="operatorsdefinition">A symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
+         </div>
+         <div class="variablesdiv">
+           <h1 id="variables">Variables</h1>
+           <p id="variablesdefinition">A value that can change, depending on conditions or on information passed to the program. </p>
+         </div>
+        <div class="functiondiv">
           <h1 id="function">Function</h1>
           <p id="functiondefinition">A type of procedure or routine.</p>
+        </div>
+        <div class="methodsdiv">
           <h1 id="methods">Methods</h1>
           <p id="methodsdefinition">A procedure associated with a message and an object</p>
+        </div>
+
         </div>
         </div>
       </div>
